--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "passport-jwt": "^0.1.0",
     "razorpay": "^2.9.2",
     "slugify": "^1.6.6",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
