--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.5",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "socket.io-client": "^4.8.1",
