--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.2",
     "cloudinary": "^1.41.0",
@@ -22,19 +22,21 @@
     "express-validator": "^7.0.1",
     "google-auth-library": "^8.9.0",
     "helmet": "^7.1.0",
+    "image-hash": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^2.0.0-rc.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "node-forge": "^1.3.1",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^0.1.0",
     "razorpay": "^2.9.2",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
-    "socket.io": "^4.7.4",
-    "node-cron": "^3.0.3"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
