--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,16 @@ backend/uploads/temp/*
 *.tmp
 *.temp
 
+# User uploads (keep structure but ignore files)
+backend/uploads/avatars/*
+backend/uploads/images/*
+backend/uploads/posts/*
+backend/uploads/products/*
+backend/uploads/banners/*
+backend/uploads/audio/*
+backend/uploads/audio-downloads/*
+!backend/uploads/.gitkeep
+
 # Backup files
 *.backup
 *.bak
@@ -60,6 +70,7 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-backend/.env
-backend/.env.local
-RAILWAY_VARIABLES_LOCAL.txt
+node_modules/
+uploads/
+dist/
+.env*
