Fix: Optimize memory limits, fix API timeouts, and update network configuration
- Reduced memory limits for 8GB MacBook Air (2GB default, 3GB medium, 4GB high)
- Fixed ERR_ADDRESS_IN_USE by updating .env.local to use localhost
- Improved API reliability with better timeout handling
- Updated mock token handling for development mode
- Fixed backend follow routes to ensure proper responses
- Added helper scripts for easier server management
- Optimized Vite configuration for better performance

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=http://localhost:7000/api
-VITE_SOCKET_URL=http://localhost:7000
+VITE_API_URL=http://192.168.1.5:7000/api
+VITE_SOCKET_URL=http://192.168.1.5:7000
 VITE_GOOGLE_CLIENT_ID=611643417807-5lqdmud2ui6sd7rf8k4hg5ocr2gi6gk4.apps.googleusercontent.com
 VITE_CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
 VITE_CLOUDINARY_UPLOAD_PRESET=your-upload-preset
