--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--max-old-space-size=8192' vite",
-    "dev:memory": "NODE_OPTIONS='--max-old-space-size=8192 --expose-gc' vite",
-    "dev:high": "NODE_OPTIONS='--max-old-space-size=12288' vite",
-    "build": "NODE_OPTIONS='--max-old-space-size=8192' vite build",
+    "dev": "NODE_OPTIONS='--max-old-space-size=2048 --expose-gc' vite",
+    "dev:memory": "NODE_OPTIONS='--max-old-space-size=3072 --expose-gc' vite",
+    "dev:high": "NODE_OPTIONS='--max-old-space-size=4096 --expose-gc' vite",
+    "build": "NODE_OPTIONS='--max-old-space-size=2048' vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
